<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginTop="10dp"
    android:layout_height="wrap_content">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgAvatar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:scaleType="centerCrop"
        app:shapeAppearanceOverlay="@style/circle_image"
        android:backgroundTint="#FDD7DE"
        android:contentDescription="@string/avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    <ImageView-->
<!--        android:id="@+id/imageView"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/ellipse_1"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/ellipse_1"-->
<!--        app:layout_constraintStart_toStartOf="@+id/ellipse_1"-->
<!--        app:layout_constraintTop_toTopOf="@+id/ellipse_1"-->
<!--        app:srcCompat="@drawable/ic_user"-->
<!--        android:contentDescription="user" />-->

    <TextView
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/poppins"
        android:letterSpacing="-0.03"
        android:text="@string/home"
        android:textColor="#BD7C89"
        android:textSize="12sp"
        app:layout_constraintStart_toEndOf="@+id/imgAvatar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|top"
        android:letterSpacing="-0.02"
        android:layout_marginStart="10dp"
        android:textColor="#F97892"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imgAvatar"
        app:layout_constraintTop_toBottomOf="@+id/home" />


    <ImageView
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/notification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_bell" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/search"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toStartOf="@+id/btnLogout"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_search" />


</androidx.constraintlayout.widget.ConstraintLayout>