<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/item_chapter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/card_image_chapter"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">
            <ImageView
                android:id="@+id/chapter_image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/thumbnail"
                android:scaleType="centerCrop"
                android:src="@drawable/test" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/card_image_chapter"
            android:layout_marginStart="16dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/chapter_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp_chap"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/chapter_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

</androidx.cardview.widget.CardView>